tests-system/typesystem-mismatch-enums/output
asil = bar.Status.DEPRECATED
           ^^^^^^ typesystem-mismatch-enums/instances.trlc:6: error: expected ASIL
Processed 1 model, 0 checks and 1 requirement file and found 1 error
